
  * Add new Tieresias fonts to mythtv-common.
  * Drop mythvideo readme file.
  * configure_mythplugins_without_mythtv_installed.patch: refresh.
  * Install mythffmpeg and mythffplay in mythtv-common.
  * While grabbing git source, capture the details of 'git describe'
    for --version output.
  * Add a new php-mythtv package for the newly developed php bindings.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Sat, 04 Dec 2010 23:36:22 -0600

mythtv (2:0.24.0+fixes.20101214.1405782-0ubuntu1) natty; urgency=low

  * in the git building rule, make sure to include the proper phrases
    for autobuilds.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 07 Dec 2010 19:09:40 -0600

mythtv (2:0.24.0+fixes.20101207.d3d2640-0ubuntu1) natty; urgency=low

  [ Mario Limonciello ]
  * Modify the get-orig-source rule to use launchpadlib to try to fetch the file
    from the archive instead.
  * Stop on runlevels [016] rather than on the start of shutdown job. (LP: #542627)
  * Move packaging to git based commands.
  * If no themes are included, don't make bad theme stubs in debian/control.
  * Update control files.
  * Add an epoch because of the changing fixes->fixes and trunk->master to allow
    proper upgrades.
  * In ppa git checker helper, if no hash returned, don't error up.
  * If running on a master build, have the update-control-files rule recommends
    mythtv-dbg.
  * Update standards version.
  * Force pic support on as much of the build as possible. (LP: #684941)
  * Move mythweb's set -e into the script invokation to quiet lintian.
  * Add python dependency to mythtv-common.
  * Demote libmythtv-perl depends to recommends on mythtv-backend.
  * Don't run the permissions fix up on python files smaller than 1 block.
  * Fixup the extra docs cleanup for mythweb.
  * >>Upstream changes since last upload (11ee9c5):
  * [d3d2640] MythArchive: Update the script to look for the fonts in
    the new location.