@@ -126,10 +126,13 @@ override_dh_installdocs:
 	find debian/mythtv-backend/usr/share/doc/mythtv-backend/contrib \
 		-name "COPYING" -delete
 	rm -f debian/mythtv-common/usr/share/mythtv/themes/Terra/watermarks/README.license
-	#(MythPlugins)
+
+	#(MythWeb)
 	for file in LICENSE README INSTALL; do \
 		rm -f debian/mythweb/usr/share/mythtv/mythweb/$$file ;\
 	done
+	find debian/mythweb -name ".gitignore" -type f -delete
+
 	#(Myththemes)
 	rm -f debian/mythtv-theme-arclight/usr/share/mythtv/themes/Arclight/LICENSE
 	rm -f debian/mythtv-theme-childish/usr/share/mythtv/themes/Childish/COPYING
