@@ -7,6 +7,7 @@ mythtv (2:0.25.0~master.20101204.803b474-0ubuntu1) UNRELEASED; urgency=low
   * While grabbing git source, capture the details of 'git describe'
     for --version output.
   * Add a new php-mythtv package for the newly developed php bindings.
+  * Don't include .gitignore files in the mythweb package.
 
  -- Mario Limonciello <Mario_Limonciello@Dell.com>  Sat, 04 Dec 2010 23:36:22 -0600
 
